v1 Final Revision for Class
- ABOUT removed table; restored paragraph
- PROJECTS Add screenshot poster frame to abbey Keller video
- REFLECTION Remove indents, tightened spacing
- REFLECTION Comment Out the Indent/drop shadow code, Just In Case 
- REFLECTION Tighten up paragraph spacing at <h2>
- UPDATED FOOTER removed image, changed phone for LinkedIn
- UPDATED NAV added more specific project/goal names

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@ Use: Contact form for portfolio inquiries and collaboration opportunities
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 17, 2025
+Updated: July 23, 2025
 Developed: July 16, 2025
-Tested: July 17, 2025:
+Tested: July 23, 2025:
 Contact form tested across multiple browsers. Functions correctly in Chrome, Firefox, and mobile Safari. 
 Desktop Safari blocks mailto forms due to security settings - this is a known Safari limitation.
 Passed VI on Mac desktop browser, iPad tablet browser, and iPhone mobile browser in Safari, Firefox, and Chrome.
@@ -59,9 +59,9 @@ Passed VI on Mac desktop browser, iPad tablet browser, and iPhone mobile browser
                     <li class="dropdown">
                         <a href="projects.html">Projects</a>
                         <ul class="mobileHide">
-                            <li><a href="projects.html#goal1">Goal 1</a></li>
-                            <li><a href="projects.html#goal2">Goal 2</a></li>
-                            <li><a href="projects.html#goal3">Goal 3</a></li>
+                            <li><a href="projects.html#goal1">Meaningful Learning<br>& Engagement</a></li>
+                            <li><a href="projects.html#goal2">Analytical Methods<br>& Systematic Design</a></li>
+                            <li><a href="projects.html#goal3">Universal Design Principles</a></li>
                         </ul>
                     </li>
                     <li><a href="reflection.html">Reflection</a></li>
@@ -121,10 +121,11 @@ Passed VI on Mac desktop browser, iPad tablet browser, and iPhone mobile browser
 
         <footer>
         Connect with Becky: 
-            <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
-            <img src="content/phone_icon.png" alt="Phone" class="footer-icon footer-icon phone">1+888-888-8888<br>
-            Built with HTML, CSS, & passion for learning technologies. | © 2025 RM Roesch
-        </footer>
+        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
+        <img src="content/briefcase_icon.png" alt="LinkedIn" class="footer-icon briefcase"><a href="https://www.linkedin.com/in/becky-roesch-309760104/" target="_blank" rel="noopener">LinkedIn Profile</a><br>
+
+        Built with HTML, CSS, & passion for learning technology. | © 2025 RM Roesch
+    </footer>
 
     </body>
     </html>
