--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ Use: Introduction to the portfolio site iteself
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 16, 2025
+Updated: July 23, 2025
 Developed: June 14, 2025
-Tested: July 17, 2025 - Passed validation
+Tested: July 23, 2025 - Passed validation
 Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
 Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
 Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
@@ -37,7 +37,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" href="nav.css" type="text/css">
 
-        <meta name="google-site-verification" content="Q6yMJ64Bthbuo07e63kiwq3h7JGnurdKnRgEramhcps" />
+        <meta name="google-site-verification" content="Q6yMJ64Bthbuo07e63kiwq3h7JGnurdKnRgEramhcps">
 </head>
 
 <body>
@@ -61,9 +61,9 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
             <li class="dropdown">
                 <a href="projects.html">Projects</a>
                 <ul class="mobileHide">
-                    <li><a href="projects.html#goal1">Goal 1</a></li>
-                    <li><a href="projects.html#goal2">Goal 2</a></li>
-                    <li><a href="projects.html#goal3">Goal 3</a></li>
+                    <li><a href="projects.html#goal1">Meaningful Learning<br>& Engagement</a></li>
+                    <li><a href="projects.html#goal2">Analytical Methods<br>& Systematic Design</a></li>
+                    <li><a href="projects.html#goal3">Universal Design Principles</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
@@ -113,11 +113,12 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
          
     </main>
 
-    <footer>
+     <footer>
         Connect with Becky: 
         <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
-        <img src="content/phone_icon.png" alt="Phone" class="footer-icon footer-icon phone">1+888-888-8888<br>
-        Built with HTML, CSS, & passion for learning technologies. | © 2025 RM Roesch
+        <img src="content/briefcase_icon.png" alt="LinkedIn" class="footer-icon briefcase"><a href="https://www.linkedin.com/in/becky-roesch-309760104/" target="_blank" rel="noopener">LinkedIn Profile</a><br>
+
+        Built with HTML, CSS, & passion for learning technology. | © 2025 RM Roesch
     </footer>
 
 </body>
