--- a/about.html
+++ b/about.html
@@ -155,8 +155,8 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
     </main>
 
     <footer>
-        Connect with Becky: 
-        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
+        Let's Connect: 
+        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">Via Email</a> | 
         <img src="content/briefcase_icon.png" alt="LinkedIn" class="footer-icon briefcase"><a href="https://www.linkedin.com/in/becky-roesch-309760104/" target="_blank" rel="noopener">LinkedIn Profile</a><br>
 
         Built with HTML, CSS, & passion for learning technology. | © 2025 RM Roesch
