--- a/projects.html
+++ b/projects.html
@@ -174,11 +174,12 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
         </div>
     </main>
 
-    <footer>
-        Let's Connect: 
-        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">Via Email</a> | 
-        <img src="content/briefcase_icon.png" alt="LinkedIn" class="footer-icon briefcase"><a href="https://www.linkedin.com/in/becky-roesch-309760104/" target="_blank" rel="noopener">LinkedIn Profile</a><br>
+        <footer>
+            Connect with Becky: 
+            <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">via Email</a> | 
+            <img src="content/briefcase_icon.png" alt="LinkedIn" class="footer-icon briefcase"><a href="https://www.linkedin.com/in/becky-roesch-309760104/" target="_blank" rel="noopener">on LinkedIn</a><br>
 
-        Built with HTML, CSS, & passion for learning technology. | © 2025 RM Roesch
-    </footer>
+            Built with HTML, CSS, & passion for learning technology. | © 2025 RM Roesch
+        </footer>
+
 </body>
